@@ -4,6 +4,7 @@ import org.example.apidiogo.Dto.ProfessorResponseDto;
 import org.example.apidiogo.Exception.ProfessorNotFoundException;
 import org.example.apidiogo.Model.Professor;
 import org.example.apidiogo.Repository.ProfessorRepository;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -14,17 +15,14 @@ import java.util.stream.Collectors;
 public class ProfessorService {
 
     private final ProfessorRepository professorRepository;
+    private final PasswordEncoder passwordEncoder;
 
-    public ProfessorService(ProfessorRepository professorRepository) {
+    public ProfessorService(
+            ProfessorRepository professorRepository,
+            PasswordEncoder passwordEncoder
+    ) {
         this.professorRepository = professorRepository;
-    }
-
-    private Professor fromRequestDTO(ProfessorRequestDto dto) {
-        Professor professor = new Professor();
-        professor.setNome(dto.getNome());
-        professor.setUsuario(dto.getUsuario());
-        professor.setSenha(dto.getSenha());
-        return professor;
+        this.passwordEncoder = passwordEncoder;
     }
 
     private ProfessorResponseDto toResponseDto(Professor professor) {
@@ -46,19 +44,34 @@ public class ProfessorService {
         Optional<Professor> professor = professorRepository.findById(id);
         return professor.stream()
                 .map(this::toResponseDto)
-                .collect(Collectors.toList());
-    }
-
-
-    public ProfessorResponseDto createProfessor(ProfessorRequestDto dto) {
-        Professor professor = fromRequestDTO(dto);
-        Professor salvo = professorRepository.save(professor);
-        return toResponseDto(salvo);
+                .toList();
     }
 
     public void deleteProfessor(Long id) {
         Professor professor = professorRepository.findById(id)
-                .orElseThrow(() -> new ProfessorNotFoundException("Professor com id " + id +" não foi encontrado: 404"));
+                .orElseThrow(() ->
+                        new ProfessorNotFoundException("Professor não encontrado")
+                );
         professorRepository.delete(professor);
     }
+
+    public ProfessorResponseDto inserirProfessor(ProfessorRequestDto request) {
+
+        String senhaCriptografada =
+                passwordEncoder.encode(request.getSenha());
+
+        professorRepository.inserirProfessorComDisciplina(
+                request.getNome(),
+                request.getUsuario(),
+                senhaCriptografada,
+                request.getDisciplina()
+        );
+
+        Professor professor =
+                professorRepository.findByUsuario(request.getUsuario())
+                        .orElseThrow();
+
+        return toResponseDto(professor);
+    }
 }
+
